--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "server": "tsc -w | nodemon --inspect ./dist/server.js --watch dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.2",
     "express": "^4.16.4",
     "socket.io": "^2.2.0"
   },
